--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>WEBSTUDIO</title>
   </head>
   <body>
@@ -36,32 +37,32 @@
           <li>
             <h3>Strategy</h3>
             <p>
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
+              Our goal is to identify the business problem to walk away with the perfect and
+              creative solution.
             </p>
           </li>
 
           <li>
             <h3>Punctuality</h3>
             <p>
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
+              Bring the key message to the brand's audience for the best price within the shortest
+              possible time.
             </p>
           </li>
 
           <li>
             <h3>Diligence</h3>
             <p>
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
+              Research and confirm brands with the strongest digital growth opportunities and
+              minimize risk.
             </p>
           </li>
 
           <li>
             <h3>Technologies</h3>
             <p>
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
+              Design practice focused on digital experiences. We bring forth a deep passion for
+              problem-solving.
             </p>
           </li>
         </ul>
@@ -71,45 +72,25 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-              height="260"
-            />
+            <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
 
           <li>
-            <img
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-              height="260"
-            />
+            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
-            <img
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-              height="260"
-            />
+            <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-              height="260"
-            />
+            <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
@@ -120,8 +101,8 @@
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
   </body>
