--- a/index.html
+++ b/index.html
@@ -3,64 +3,81 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <title>WEBSTUDIO</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <ul class="list">
+          <li class="list-item"><a class="list-link" href="">Studio</a></li>
+          <li class="list-item"><a class="list-link" href="#portfolio">Portfolio</a></li>
+          <li class="list-item"><a class="list-link" href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li class="address-item">
+            <a class="address-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-item">
+            <a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
 
-      <section>
+      <section class="about-us">
         <h2 hidden>About Us</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+        <ul class="about-us-list">
+          <li class="about-us-item">
+            <h3 class="about-us-title">Strategy</h3>
+            <p class="about-us-p">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
 
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Punctuality</h3>
+            <p class="about-us-p">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
 
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Diligence</h3>
+            <p class="about-us-p">
               Research and confirm brands with the strongest digital growth opportunities and
               minimize risk.
             </p>
           </li>
 
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="about-us-item">
+            <h3 class="about-us-title">Technologies</h3>
+            <p class="about-us-p">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -68,39 +85,134 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
+      <section class="our-team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img
+              class="team-photo"
+              src="./images/team/mark-guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
+          </li>
+
+          <li class="team-item">
+            <img
+              class="team-photo"
+              src="./images/team/tom-ford.jpg"
+              alt="Tom Ford"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-position">Frontend Developer</p>
+          </li>
+
+          <li class="team-item">
+            <img
+              class="team-photo"
+              src="./images/team/camila-garcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-position">Marketing</p>
+          </li>
+
+          <li class="team-item">
+            <img
+              class="team-photo"
+              src="./images/team/daniel-wilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+              height="260"
+            />
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-position">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section id="portfolio">
+        <h2>Our Portfolio</h2>
         <ul>
           <li>
-            <img src="./images/mark-guerrero.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <img
+              src="./images/portfolio/banking-app.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3>Banking App</h3>
+            <p>App</p>
           </li>
 
           <li>
-            <img src="./images/tom-ford.jpg" alt="Tom Ford" width="264" height="260" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-
-          <li>
-            <img src="./images/camila-garcia.jpg" alt="Camila Garcia" width="264" height="260" />
-            <h3>Camila Garcia</h3>
+            <img
+              src="./images/portfolio/cashless-payment.jpg"
+              alt="Cashless Payment"
+              width="360"
+              height="300"
+            />
+            <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </li>
 
           <li>
-            <img src="./images/daniel-wilson.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <img
+              src="./images/portfolio/meditation-app.jpg"
+              alt="Meditation App"
+              width="360"
+              height="300"
+            />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolio/taxi-service.jpg"
+              alt="Taxi Service"
+              width="360"
+              height="300"
+            />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolio/screen-illustrations.jpg"
+              alt="Screen Illustrations"
+              width="360"
+              height="300"
+            />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+
+          <li>
+            <img
+              src="./images/portfolio/online-courses.jpg"
+              alt="Online Courses"
+              width="360"
+              height="300"
+            />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <p class="footer-p">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
