--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       <nav class="nav">
         <a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
         <ul class="list">
-          <li class="list-item"><a class="list-link" href="">Studio</a></li>
+          <li class="list-item">
+            <a class="list-link" href="">Studio</a>
+          </li>
           <li class="list-item"><a class="list-link" href="#portfolio">Portfolio</a></li>
           <li class="list-item"><a class="list-link" href="">Contacts</a></li>
         </ul>
@@ -96,8 +98,10 @@
               width="264"
               height="260"
             />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-position">Product Designer</p>
+            <div class="team-info">
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-position">Product Designer</p>
+            </div>
           </li>
 
           <li class="team-item">
@@ -139,72 +143,78 @@
       </section>
 
       <section id="portfolio">
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-name">Banking App</h3>
+            <p class="portfolio-name-desc">App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Cashless Payment</h3>
+            <p class="portfolio-name-desc">Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/meditation-app.jpg"
               alt="Meditation App"
               width="360"
               height="300"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-name">Meditation App</h3>
+            <p class="portfolio-name-desc">App</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Taxi Service</h3>
+            <p class="portfolio-name-desc">Marketing</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-name">Screen Illustrations</h3>
+            <p class="portfolio-name-desc">Design</p>
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <img
+              class="portfolio-img"
               src="./images/portfolio/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-name">Online Courses</h3>
+            <p class="portfolio-name-desc">Marketing</p>
           </li>
         </ul>
       </section>
