--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="logo" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <ul class="list">
           <li class="list-item">
             <a class="list-link" href="">Studio</a>
@@ -98,10 +98,8 @@
               width="264"
               height="260"
             />
-            <div class="team-info">
-              <h3 class="team-name">Mark Guerrero</h3>
-              <p class="team-position">Product Designer</p>
-            </div>
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-position">Product Designer</p>
           </li>
 
           <li class="team-item">
