--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <a class="logo" href="./index.html">Web<span class="logo-part">Studio</span></a>
         <ul class="list">
           <li class="list-item">
-            <a class="list-link" href="">Studio</a>
+            <a class="list-link" href="./index.html">Studio</a>
           </li>
-          <li class="list-item"><a class="list-link" href="#portfolio">Portfolio</a></li>
+          <li class="list-item"><a class="list-link" href="">Portfolio</a></li>
           <li class="list-item"><a class="list-link" href="">Contacts</a></li>
         </ul>
       </nav>
@@ -219,7 +219,7 @@
     </main>
 
     <footer class="footer">
-      <a class="logo-footer" href="./index.html"><span class="logo-part">Web</span>Studio</a>
+      <a class="logo-footer" href="./index.html">Web<span class="logo-part-footer">Studio</span></a>
       <p class="footer-p">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
